<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.surovcevnv.tawactions.main.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/blue_sea">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/text_input_code"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/btn_1"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="1"
                android:text="@string/keyboard_1" />

            <Button
                android:id="@+id/btn_2"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="2"
                android:text="@string/keyboard_2" />

            <Button
                android:id="@+id/btn_3"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="3"
                android:text="@string/keyboard_3" />


            <Button
                android:id="@+id/btn_0"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="0"
                android:text="@string/keyboard_0" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/btn_4"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="4"
                android:text="@string/keyboard_4" />

            <Button
                android:id="@+id/btn_5"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="5"
                android:text="@string/keyboard_5" />

            <Button
                android:id="@+id/btn_6"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="6"
                android:text="@string/keyboard_6" />


            <Button
                android:id="@+id/btn_clear"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="clear"
                android:text="@string/keyboard_x" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <Button
                android:id="@+id/btn_7"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="7"
                android:text="@string/keyboard_7" />

            <Button
                android:id="@+id/btn_8"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="8"
                android:text="@string/keyboard_8" />

            <Button
                android:id="@+id/btn_9"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:onClick="onClick"
                android:tag="9"
                android:text="@string/keyboard_9" />

            <Button
                android:id="@+id/btn_enter"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:tag="enter"
                android:text="@string/keyboard_enter"
                android:onClick="onClick"
                android:textColor="@color/green_tea"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:layout_below="@+id/info"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/pin_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:textSize="25sp"
        android:gravity="center"
        android:ems="10"
        android:layout_below="@+id/info"
        android:layout_centerHorizontal="true"
        android:textColor="#000000">

    </EditText>
</RelativeLayout>
